2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	depcomp: fix bugs in tests and in the depcomp script
	* lib/depcomp (gcc): Remove duplicated `-e' from sed invocation.
	* tests/depcomp10.test: Make it executable.  Fix a blunder that
	has left part of an intended comment not prefixed by `#', thus
	causing shell syntax errors.  In this same comment, break a
	too-long reported error message on multiple lines, for clarity.
	Add reference to the relevant bug report.  Add a comment which
	explains why the test result 'skipped' if the first "make" call
	fails.  Add other useful comments.
	* tests/depcomp9.test: Slightly improve comments.

2011-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix hp depmode for VPATH builds with GNU make.
	* lib/depcomp: Be sure to remove VPATH-prefixed object from
	dependency output when creating stub rule.
	* tests/depcomp10.test: New test.
	* tests/Makefile.am (TESTS): Update.
	* NEWS: Update.
	Report by Bruno Haible.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: fix 'javac' requirement for older JDK versions
	The Java compiler from JDK 1.5 (and presumably earlier versions)
	cannot handle the `-version' option by itself; and while it does
	print the version number, it then errors out with an usage error:
	  $ javac -version
	  javac 1.5.0_22
	  javac: no source files
	  Usage: javac <options> <source files>
	  ...
	Luckily, adding the `-help' option to the `javac' invocation
	seems to fix this problem.
	* tests/defs.in (javac): Pass also the `-help' option to the
	`javac' program.  Add a comment explaining why it is needed.
	Report from Ralf Wildenhues.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: new requirement for the default java compiler
	* tests/defs.in (for tool in $required): New requirement 'javac'.
	* tests/java.test: Use it instead of ad-hoc configure check.
	* tests/java-check.test: Likewise.
	* tests/instfail-java.test: Likewise.