@@ -47,8 +47,6 @@ $AUTOMAKE -a -c
 $MAKE
 $MAKE distcheck
 
-distdir=$me-1.0
-
 gzip -d $distdir.tar.gz
 
 tar tf $distdir.tar | $FGREP support
