@@ -43,8 +43,6 @@ cat >src/subdir2/Makefile.am <<'EOF'
 EXTRA_DIST = foo
 EOF
 
-distdir=$me-1.0
-
 $ACLOCAL
 $AUTOCONF
 $AUTOMAKE --copy --add-missing
