@@ -24,6 +24,8 @@
 
 set -e
 
+# We are going to override package version in AC_INIT, so we need
+# to redefine the name of the distdir as well.
 distdir=$me-7.45.3a
 
 # This should work without tex, texinfo or makeinfo
