@@ -1,3 +1,13 @@
+2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	test defs: define default $distdir (help reducing duplication)
+	* tests/defs.in ($distdir): New variable, might be used in
+	testcases checking distribution-related features.
+	* tests/pr9.test: Use it.
+	* tests/subdir9.test: Likewise.
+	* tests/vtexi3.test: Add comment explaining why we redefine
+	$distdir in this test.
+
 2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	depcomp: fix bugs in tests and in the depcomp script
